--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
     "sass": "^1.69.5"
-  }
+  },
+  "scripts": {
+    "watch": "sass --watch scss/styles.scss:assets/css/styles.css"
+}
 }
